--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
     <button type="submit" name="register" value="register">Register</button>
 </form>
 <p>
-<a href="index.html">Volver al inicio</a>
+<a href="index.html">Volver ao inicio</a>
 </p>
 </body>
 </html> 
